# llvm-offload

./: README.md
my_llvm/experiment/: mlir_bottleneck_analyzer.cpp
my_llvm/experiment/heavy_ops/: dma_runtime.c  dma_runtime.h  heavy_custom.ll  heavy_offload.ll  heavy_ops.c  heavy_ops.elf
my_llvm/experiment/heavy_ops/ll/: heavy_ops.bc  heavy_ops.ll
my_llvm/experiment/heavy_ops/test/: set_env.sh
my_llvm/experiment/heavy_ops/test/mlir/: fused.mlir
my_llvm/experiment/heavy_ops/test/runtime/: cycle.h  dma.h  main.c
my_llvm/experiment/heavy_ops/test/script/: run_pass.sh  run_renode.resc
my_llvm/experiment/prim_filter/: input.txt  output.txt  prim_filter  prim_filter.c  prim_filter.ll  prim_filter_demo.ll  prim_filter_offload.ll
my_llvm/experiment/prim_filter/offload/dense_ops/: dense_ops.c  dense_ops.ll  dense_ops_offload.ll  dense_ops_out.ll
my_llvm/experiment/prim_filter/offload/heavy_ops/: .dma_runtime.h.swp  heavy_ops.bc  heavy_ops.c  heavy_ops.ll  heavy_ops.s
my_llvm/experiment/switch/: switch.c  switch.ll  switch_offload.ll  switch_switch.ll
my_llvm/experiment/test/: test.c  test.ll  test_mema.ll  test_out.ll  test_out.ll.ll
my_llvm/llvm/lib/Transforms/: CMakeLists.txt
my_llvm/llvm/lib/Transforms/Demo/: CMakeLists.txt  HelloLoad.cpp
my_llvm/llvm/lib/Transforms/MyPass/AutoOffload/: AutoOffloadPass.cpp  CMakeLists.txt
my_llvm/llvm/lib/Transforms/MyPass/CountInst/: CMakeLists.txt  CountInstPass.cpp
my_llvm/llvm/lib/Transforms/MyPass/CustomOffload/: CMakeLists.txt  CustomOffloadPass.cpp
my_llvm/llvm/lib/Transforms/MyPass/FuncName/: CMakeLists.txt  FuncNamePass.cpp
my_llvm/llvm/lib/Transforms/MyPass/MemAccess/: CMakeLists.txt  MemAccessPass.cpp
my_llvm/llvm/lib/Transforms/MyPass/SwitchCase/: CMakeLists.txt  SwitchCasePass.cpp
my_llvm/llvm/test/TableGen/: my_dialect_attrs.td
my_llvm/mlir/examples/toy/: CMakeLists.txt
my_llvm/mlir/examples/toy/MyAccel/: CMakeLists.txt  myaccel.cpp
my_llvm/mlir/examples/toy/MyAccel/include/toy/: CMakeLists.txt  Ops.td
my_llvm/mlir/examples/toy/MyAccel/mlir/: MyAccelCombine.cpp  MyAccelCombine.td
my_llvm/mlir/examples/transform/: CMakeLists.txt
my_llvm/mlir/examples/transform/Accelerator/: CMakeLists.txt
my_llvm/mlir/examples/transform/Accelerator/include/: CMakeLists.txt  MyExtension.td
my_llvm/mlir/examples/transform/Accelerator/lib/: CMakeLists.txt
my_llvm/mlir/examples/transform/Accelerator/transform-opt/: transform-opt.cpp
my_llvm/mlir/lib/ExecutionEngine/: CMakeLists.txt
my_llvm/mlir/lib/Transforms/: CMakeLists.txt  HelloWorld.cpp
my_llvm/mlir/test/axi4mlir-runner/: accel-dialect.mlir  accel-to-runtime.mlir  codegen-for-matmul.mlir  generic-to-accel-options.mlir  generic-to-accel.mlir  matmul_accelerator_v2_b_stat.mlir  opcode-map-roundtrip.mlir  run-axi-v1-data-copy.mlir  run-matmul-v1accel.mlir
my_llvm/mlir/test/mlir-custom-pass/: simple.mlir
my_llvm/mlir/tools/: CMakeLists.txt
(+35 files in other folders)
